hide social icons in header to on mobile to avoid UX warning about elements being too close to tap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -110,3 +110,9 @@ div.two-column {
     padding: $tiny-spacing;
   }
 }
+
+@include media($mobile) {
+  .hidden-on-mobile {
+    display: none
+  }
+}
